lightdm (1.18.0-1) UNRELEASED; urgency=medium

  * New upstream release.
  * debian/watch updated for tracking 1.18 branch.

 -- Yves-Alexis Perez <corsac@debian.org>  Wed, 23 Mar 2016 13:38:34 +0100

lightdm (1.16.7-1) unstable; urgency=medium

  * New upstream bugfix release.
  * debian/control:
    - make libaudit-dev build-dep linux-only, fix FTBFS on !linux.
                                                                closes: #815343
    - update standards version to 3.9.7. 

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 22 Feb 2016 13:20:36 +0100

lightdm (1.16.6-1) unstable; urgency=medium

  * New upstream bugfix release.
    - fix crash when XDMCP is enabled and a packet with no address is received
    (CVE-2015-8316)

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 24 Nov 2015 21:03:33 +0100

lightdm (1.16.5-1) unstable; urgency=medium

  * New upstream bugfix release.

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 10 Nov 2015 10:56:27 +0100

lightdm (1.16.3-1) unstable; urgency=medium

  * New upstream bugfix release.

 -- Yves-Alexis Perez <corsac@debian.org>  Sat, 17 Oct 2015 21:54:44 +0200

lightdm (1.16.2-1) unstable; urgency=medium

  * debian/patches:
    - 05_debianize-pam-files updated, fix pam_env configuration and correctly
      load /etc/environment.                                    closes: #798967
  * debian/watch updated to track 1.16 branch.
  * New upstream release.
  * debian/liblightdm-gobject-1-0.symbols updated for new release.
  * debian/control:
    - add build-dep on libaudit-dev for audit support.

 -- Yves-Alexis Perez <corsac@debian.org>  Sat, 19 Sep 2015 15:08:51 +0200

lightdm (1.14.2-2) unstable; urgency=medium

  * debian/liblightdm-qt-3-0.symbols updated for symbols removed due to the
    gcc 5 transition.                                           closes: #777981

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 25 Aug 2015 21:02:40 +0200

lightdm (1.14.2-1) unstable; urgency=medium

  * New upstream release.
